--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   hive_flutter: ^1.1.0
-  intl: ^0.19.0
+  intl: 0.20.2
   uuid: ^4.5.1
 
 dev_dependencies:
